add some section and style

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- slich slider end -->
 
+  <!-- font-awesome cdn start -->
+   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css">
+  <!-- font-awesome cdn end -->
+
   <!-- fave icon -->
   <link rel="icon" href="./images/fave-icon.png">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -413,15 +417,78 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <div class="card-body">
+        <div class="row ">
+          <div class="col-lg-4 p-0">
+            <div class="card reviwe_grid border-0">
+              <div class="card-body reviwe p-0">
+                <h5 class="card-title quote"><i class="fa-solid fa-quote-left"></i></h5>
+                <p class="card-text reviwe_text">I had a good experience while using this app, what fascinated me was the live tracking feature There are many variations of passages of Lorem Ipsum available, but the majority.</p>
+                <div class="star">
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </div>
+                <div class="reviwer d-flex align-items-center">
+                  <div class="user_image">
+                    <img src="./images/reviwer1.png" alt="reviwer1.pn">
+                  </div>
+                  <div class="user_destination">
+                    <h6>Eric Drake</h6>
+                    <p>Digital Marketor</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+          <div class="col-lg-4 p-0">
+            <div class="card reviwe_grid border-0">
+              <div class="card-body reviwe p-0">
+                <h5 class="card-title quote"><i class="fa-solid fa-quote-left"></i></h5>
+                <p class="card-text reviwe_text">I had a good experience while using this app, what fascinated me was the live tracking feature There are many variations of passages of Lorem Ipsum available, but the majority.</p>
+                <div class="star">
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </div>
+                <div class="reviwer d-flex align-items-center">
+                  <div class="user_image">
+                    <img src="./images/reviwer1.png" alt="reviwer1.pn">
+                  </div>
+                  <div class="user_destination">
+                    <h6>Eric Drake</h6>
+                    <p>Digital Marketor</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 p-0">
+            <div class="card reviwe_grid border-0">
+              <div class="card-body reviwe p-0">
+                <h5 class="card-title quote"><i class="fa-solid fa-quote-left"></i></h5>
+                <p class="card-text reviwe_text">I had a good experience while using this app, what fascinated me was the live tracking feature There are many variations of passages of Lorem Ipsum available, but the majority.</p>
+                <div class="star">
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </div>
+                <div class="reviwer d-flex align-items-center">
+                  <div class="user_image">
+                    <img src="./images/reviwer1.png" alt="reviwer1.pn">
+                  </div>
+                  <div class="user_destination">
+                    <h6>Eric Drake</h6>
+                    <p>Digital Marketor</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -430,17 +497,110 @@
     </section>
     <!-- Client Reviews section end -->
 
+    <!-- contact section start -->
+     <section id="contact">
+      <div class="container">
+        <div class="row align-items-center ">
+          <div class="col-lg-6 contact_text">
+            <h3>We Do design, Code & Development</h3>
+            <p>I had a good experience while using this app, what fascinated me was the live tracking feature There are many variations of passages of Lorem Ipsum available, but the majority.</p>
+            <p>There are many variations of passages of Lorem Ipsum available, but themajority  have suffered alteration in some form.</p>
+          </div>
+          <div class="col-lg-6">
+            <div class="contact_form">
+              <h3>Get a free quote now</h3>
 
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="red"></div>
+              <form action="#" method="post">
+
+                <label for="name">Name</label>
+                <input id="name" type="text" placeholder="Enter your name">
+
+                <label for="email">Email</label>
+                <input id="email" type="email" placeholder="Enter you r email">
+
+                <label for="phone">Phone</label>
+                <input id="phone"  type="tel" placeholder="Enter your phone number">
+
+                <button type="submit">Get Pricing Now</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- contact section end -->
+
+  </main>
+
+  <!-- footer section start -->
+  <footer>
+    <div class="container">
+      <div class="row align-items-start justify-content-between p-3">
+        <div class="col-lg-4">
+          <div class="side_logo">
+            <img src="./images/logo (2).png" alt="logo (2).png">
+            <p>I had a good experience while using this app, what fascinated me was the live tracking feature There are many variations of passages of Lorem Ipsum available, but the majority.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 ">
+          <div class="footer_menu">
+            <h5>About</h5>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Careers</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-lg-2">
+          <div class="footer_menu">
+            <h5>Company</h5>
+            <ul>
+              <li><a href="#">Our Team</a></li>
+              <li><a href="#"> Partner With Us</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-2">
+          <div class="footer_menu">
+            <h5>Support</h5>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#"> Partner With Us</a></li>
+              <li><a href="#">Support Center</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Accesbility</a></li>
+            </ul>
+          </div>
+        </div>
+
+        
+        
+        <div class="col-lg-2">
+          <div class="footer_menu">
+            <h5>Get in touch</h5>
+            <ul>
+              <li><a href="#">info@gmail.com</a></li>
+              <li><a href="#">+88 0121 0212</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
 
-      <div class="col-lg-6">
-        <div class="text"></div>
+      <div class="row pt-5">
+        <hr>
+        <div class="col-lg-12 pt-3 pb-3 text-center style="font-size: 16px;font-weight: 400; line-height: 26px; color: #D0D0D0;">
+          <p>All credit goes to @agence.com</p>
+        </div>
       </div>
     </div>
-  </main>
+  </footer>
+  <!-- footer section end -->
 
 
 
